Add TODOs for post body and additional backend headers, cleanup
