# internal/proxy/handler.go
@@ -13,28 +13,28 @@ import (
 
 // @Summary Do a GET request.
 // @Tags Proxy Methods
-// @Description Query httpod as reverse proxy to url.
+// @Description Query httpod as reverse proxy to uri.
 // @Accept  json
 // @Produce  json
-// @Param url header string false "Full URL to use for the backend request. Mandatory. e.g. https://example.org/path "
+// @Param uri header string false "Full URI to use for the backend request. Mandatory. e.g. https://example.org/path "
 // @Param method header string false "Method to use for the backend request. Optional, defaults to 'GET'."
-// @Param body header string false "Body to use for a POST request. Optional."
-// @Param additionalHeaders header string false "JSON of headers to add to the backend request. Optional."
+// TODO @Param body header string false "Body to use for a POST request. Optional."
+// TODO @Param additionalHeaders header string false "JSON of headers to add to the backend request. Optional."
 // @Success 200
 // @Failure 400
 // @Failure 500
 // @Router /proxy [get]
 func GetHandler(context echo.Context) error {
 	if err = Br.configureBackendRequest(context.Request()); err != nil {
-		return context.String(http.StatusBadRequest, string(err.Error()))
+		return context.String(http.StatusBadRequest, err.Error())
 	}
 
 	if resp, err = Br.requestBackend(); err != nil {
-		return context.String(http.StatusInternalServerError, string(err.Error()))
+		return context.String(http.StatusInternalServerError, err.Error())
 	}
 
 	if jsonResp, err = json.MarshalIndent(resp, "", "   "); err != nil {
-		return context.String(http.StatusInternalServerError, string(err.Error()))
+		return context.String(http.StatusInternalServerError, err.Error())
 	}
 	return context.String(http.StatusOK, string(jsonResp))
 
@@ -53,16 +53,13 @@ func (br *BackendRequest) configureBackendRequest(req *http.Request) error {
 	if br.Method == "" {
 		br.Method = "GET"
 	}
-	br.Url, err = url.Parse(req.Header.Get("url"))
+	br.URI, err = url.Parse(req.Header.Get("uri"))
 	if err != nil {
 		return err
 	}
-	if br.Url.Scheme == "" || br.Url.Host == "" {
-		return errors.New("Invalid query input.")
+	if br.URI.Scheme == "" || br.URI.Host == "" {
+		return errors.New("invalid query input")
 	}
-	additionalHeaders := []byte(req.Header.Get("additionalHeaders")) // TODO
-	json.Unmarshal(additionalHeaders, &br.AdditionalHeaders)
-
 	return nil
 }
 
@@ -82,12 +79,8 @@ func (br *BackendRequest) requestBackend() (*BackendResponse, error) {
 		br.HttpClient = &http.Client{Transport: backendTransport}
 	}
 
-	if br.Request, err = http.NewRequest(br.Method, br.Url.String(), nil); err != nil {
+	if br.Request, err = http.NewRequest(br.Method, br.URI.String(), nil); err != nil {
 		return nil, errors.New("Error on proxied request: " + err.Error())
-	}
-
-	for _, header := range br.AdditionalHeaders {
-		br.Request.Header.Add(header, br.AdditionalHeaders["header"])
 	}
 
 	if res, err = br.HttpClient.Do(br.Request); err != nil {
